process deps too for dapr-spring (#1502)
Signed-off-by: Cassandra Coyle <cassie@diagrid.io>
Signed-off-by: Javier Aliaga <javier@diagrid.io>

--- a/dapr-spring/pom.xml
+++ b/dapr-spring/pom.xml
@@ -33,8 +33,7 @@
     <maven.compiler.release>11</maven.compiler.release>
     <testcontainers.version>1.19.8</testcontainers.version>
     <junit.version>5.11.2</junit.version>
-    <!-- WARNING: don't change this property unless you also update .github/scripts/update_sdk_version.sh -->
-    <dapr.spring.version>0.17.0-SNAPSHOT</dapr.spring.version>
+    <dapr.spring.version>0.16.0-rc-1</dapr.spring.version>
   </properties>
 
   <dependencyManagement>
