--- a/pom.xml
+++ b/pom.xml
@@ -658,6 +658,18 @@
       <modules>
         <module>sdk-tests</module>
       </modules>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <skipTests>true</skipTests>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+
     </profile>
   </profiles>
 
