--- a/sdk-actors/pom.xml
+++ b/sdk-actors/pom.xml
@@ -86,6 +86,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.2.0</version>
+        <configuration>
+          <notimestamp>true</notimestamp>
+        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
