--- a/sdk-springboot/pom.xml
+++ b/sdk-springboot/pom.xml
@@ -97,6 +97,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.7.0</version>
+        <configuration>
+          <notimestamp>true</notimestamp>
+        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
