Feat Cross App CallActivity (#1468)
* cross app ex

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* update protoc cmd

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* feedback

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* builder pattern

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* fix protoc

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* debug log levels for test containers

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* update readme and add debugging info

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* add IT test for cross app call activity

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* cleanup test

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* sysout -> ctx.logger

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* reset pom

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* rm debug lines from readme

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* fix header + rm customports

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* use consts

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* rm waitfor call

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* rm pubsub

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* rm timeout

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* reset empty lines added

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* reset appname for daprcontainer

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* reset empty line diff

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* rm constructor info from readme

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* debug -> info

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* rm super.start

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* reset dapr container diff

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* add test for codecov

Signed-off-by: Cassandra Coyle <cassie@diagrid.io>

* up timeout time to unblock PR

Signed-off-by: Cassandra Coyle <cassie@dia

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -145,7 +145,7 @@ jobs:
       run: ./mvnw clean install -B -q -DskipTests
     - name: Integration tests using spring boot version ${{ matrix.spring-boot-version }}
       id: integration_tests
-      run: PRODUCT_SPRING_BOOT_VERSION=${{ matrix.spring-boot-version }} ./mvnw -B -Pintegration-tests verify
+      run: PRODUCT_SPRING_BOOT_VERSION=${{ matrix.spring-boot-version }} ./mvnw -B -Pintegration-tests dependency:copy-dependencies verify
       env:
           DOCKER_HOST: ${{steps.setup_docker.outputs.sock}}
     - name: Upload failsafe test report for sdk-tests on failure
