--- a/dapr-spring/pom.xml
+++ b/dapr-spring/pom.xml
@@ -13,7 +13,7 @@
   <groupId>io.dapr.spring</groupId>
   <artifactId>dapr-spring-parent</artifactId>
   <packaging>pom</packaging>
-  <version>0.16.0-rc-1</version>
+  <version>1.16.0-rc-1</version>
   <name>dapr-spring-parent</name>
   <description>SDK extension for Spring and Spring Boot</description>
 
@@ -33,7 +33,6 @@
     <maven.compiler.release>11</maven.compiler.release>
     <testcontainers.version>1.19.8</testcontainers.version>
     <junit.version>5.11.2</junit.version>
-    <dapr.spring.version>0.16.0-rc-1</dapr.spring.version>
   </properties>
 
   <dependencyManagement>
@@ -57,27 +56,27 @@
       <dependency>
         <groupId>io.dapr</groupId>
         <artifactId>dapr-sdk-workflows</artifactId>
-        <version>${dapr.sdk.alpha.version}</version>
+        <version>${dapr.sdk.version}</version>
       </dependency>
       <dependency>
         <groupId>io.dapr.spring</groupId>
         <artifactId>dapr-spring-data</artifactId>
-        <version>${dapr.spring.version}</version>
+        <version>${dapr.sdk.version}</version>
       </dependency>
       <dependency>
         <groupId>io.dapr.spring</groupId>
         <artifactId>dapr-spring-messaging</artifactId>
-        <version>${dapr.spring.version}</version>
+        <version>${dapr.sdk.version}</version>
       </dependency>
       <dependency>
         <groupId>io.dapr.spring</groupId>
         <artifactId>dapr-spring-workflows</artifactId>
-        <version>${dapr.spring.version}</version>
+        <version>${dapr.sdk.version}</version>
       </dependency>
       <dependency>
         <groupId>io.dapr.spring</groupId>
         <artifactId>dapr-spring-boot-autoconfigure</artifactId>
-        <version>${dapr.spring.version}</version>
+        <version>${dapr.sdk.version}</version>
       </dependency>
       <dependency>
         <groupId>io.dapr</groupId>
@@ -119,7 +118,7 @@
       <dependency>
         <groupId>io.dapr.spring</groupId>
         <artifactId>dapr-spring-boot-tests</artifactId>
-        <version>${dapr.spring.version}</version>
+        <version>${dapr.sdk.version}</version>
       </dependency>
 
       <!-- Test dependencies -->
@@ -186,6 +185,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.2.0</version>
+        <configuration>
+          <notimestamp>true</notimestamp>
+        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
