--- a/sdk-autogen/pom.xml
+++ b/sdk-autogen/pom.xml
@@ -22,7 +22,7 @@
     <protobuf.input.directory>${project.build.directory}/proto</protobuf.input.directory>
     <maven.deploy.skip>false</maven.deploy.skip>
     <grpc.version>1.69.0</grpc.version>
-    <protocCommand>protoc</protocCommand>
+    <protocCommand>java-sdk-protoc</protocCommand>
     <protobuf.version>3.25.5</protobuf.version>
   </properties>
 
@@ -132,7 +132,7 @@
               <goal>run</goal>
             </goals>
             <configuration>
-              <protocCommand>protoc</protocCommand>
+              <protocCommand>java-sdk-protoc</protocCommand>
               <protocVersion>${protobuf.version}</protocVersion>
               <protocArtifact>com.google.protobuf:protoc:3.25.5</protocArtifact>
               <addProtoSources>inputs</addProtoSources>
@@ -176,6 +176,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.2.0</version>
+        <configuration>
+          <notimestamp>true</notimestamp>
+        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
