--- a/sdk-workflows/pom.xml
+++ b/sdk-workflows/pom.xml
@@ -12,7 +12,7 @@
 
   <artifactId>dapr-sdk-workflows</artifactId>
   <packaging>jar</packaging>
-  <version>0.16.0-rc-1</version>
+  <version>1.16.0-rc-1</version>
   <name>dapr-sdk-workflows</name>
   <description>SDK for Workflows on Dapr</description>
 
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>io.dapr</groupId>
       <artifactId>durabletask-client</artifactId>
-      <version>1.5.6</version>
+      <version>1.5.10</version>
     </dependency>
     <!--
     manually declare durabletask-client's jackson dependencies
@@ -100,6 +100,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.2.0</version>
+        <configuration>
+          <notimestamp>true</notimestamp>
+        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
