--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -134,7 +134,7 @@
     </dependency>
     <dependency>
       <groupId>io.grpc</groupId>
-      <artifactId>grpc-netty-shaded</artifactId>
+      <artifactId>grpc-netty</artifactId>
       <version>${grpc.version}</version>
     </dependency>
   </dependencies>
