--- a/spring-boot-examples/workflows/remote-activities/worker-two/pom.xml
+++ b/spring-boot-examples/workflows/remote-activities/worker-two/pom.xml
@@ -53,6 +53,13 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
