--- a/spring-boot-examples/pom.xml
+++ b/spring-boot-examples/pom.xml
@@ -52,6 +52,11 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.2.2</version>
+      </plugin>
     </plugins>
   </build>
 </project>
