--- a/spring-boot-examples/workflows/multi-app/pom.xml
+++ b/spring-boot-examples/workflows/multi-app/pom.xml
@@ -9,7 +9,7 @@
     <version>1.17.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>remote-activities</artifactId>
+  <artifactId>multi-app</artifactId>
   <version>1.17.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
