--- a/spring-boot-examples/workflows/multi-app/worker-two/pom.xml
+++ b/spring-boot-examples/workflows/multi-app/worker-two/pom.xml
@@ -5,7 +5,7 @@
 
   <parent>
     <groupId>io.dapr</groupId>
-    <artifactId>remote-activities</artifactId>
+    <artifactId>multi-app</artifactId>
     <version>1.17.0-SNAPSHOT</version>
   </parent>
 
