updating tests to validate output from APIs
Signed-off-by: salaboy <Salaboy@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -665,6 +665,7 @@
       <id>integration-tests</id>
       <modules>
         <module>sdk-tests</module>
+        <module>spring-boot-examples</module>
       </modules>
         <build>
             <plugins>
