--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ env.JDK_VER }}
       - name: Run tests
-        run: ./mvnw clean install -B -q
+        run: ./mvnw clean install -B -q -DskipITs=true
       - name: Codecov
         uses: codecov/codecov-action@v5.5.0
       - name: Upload test report for sdk
