fix Cassie's suggestions
Signed-off-by: salaboy <Salaboy@gmail.com>

--- a/spring-boot-examples/workflows/multi-app/worker-one/pom.xml
+++ b/spring-boot-examples/workflows/multi-app/worker-one/pom.xml
@@ -53,6 +53,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <finalName>worker-one</finalName>
+        </configuration>
         <executions>
           <execution>
             <goals>
