Adding remote activities example with Spring Boot (#1550)
* Revert "Generate updated javadocs for 1.15.1"

This reverts commit a782438c3633c2084dc3d7f1544543fe36e45b1b.

Signed-off-by: salaboy <Salaboy@gmail.com>

* git add remote activities example, refactor modules

Signed-off-by: salaboy <Salaboy@gmail.com>

* Revert "Revert "Generate updated javadocs for 1.15.1""

This reverts commit 19cf759428101de31191898de72dcb589fa61e53.

Signed-off-by: salaboy <Salaboy@gmail.com>

* updating pipeline for MM

Signed-off-by: salaboy <Salaboy@gmail.com>

* updating tests to cover multiple apps

Signed-off-by: salaboy <Salaboy@gmail.com>

* fix right path

Signed-off-by: salaboy <Salaboy@gmail.com>

* adding tests to orchestrator

Signed-off-by: salaboy <Salaboy@gmail.com>

* fixing failsafe classpath

Signed-off-by: salaboy <Salaboy@gmail.com>

* refactor multi-app

Signed-off-by: salaboy <Salaboy@gmail.com>

* Add Tool Calling to Java SDK (#1481)

* Use Java Bean for connection details and add more tests (#1317)

* Use Java Bean for connection details and add more tests

Signed-off-by: Artur Ciocanu <ciocanu@adobe.com>

* Simplify mock setup

Signed-off-by: Artur Ciocanu <ciocanu@adobe.com>

* Adding even more tests for test coverage

Signed-off-by: Artur Ciocanu <ciocanu@adobe.com>

---------

Signed-off-by: Artur Ciocanu <ciocanu@adobe.com>
Co-authored-by: Artur Ciocanu <ciocanu@adobe.com>
Co-authored-by: Cassie Coyle <cassie@diagrid.io>
Signed-off-by: sirivarma <siri.varma@outlook.com>

* Update CONTRIBUTING.md

Signed-off-by: Siri Varma Vegiraju <siri.varma@outlook.com>
Signed-off-by: sirivarma <siri.varma@outlook.com>

* Bump codecov/codecov-action from 5.4.0 to 5.4.2 (#1318)

Bumps [codecov/codecov-action](https://github.com/codecov/codecov-action) from 5.4.0 to 5.4.2.
- [Release notes](https://github.com/codecov/codecov-action/releases)
- [Changelog](https://github.com/codecov/codecov-action/blob/main/CHANGELOG.md)
- [Commits](https://github.com/codecov/codecov-action/

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <spotbugs.fail>true</spotbugs.fail>
     <spotbugs.exclude.filter.file>../spotbugs-exclude.xml</spotbugs.exclude.filter.file>
     <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
-    <failsafe.version>3.2.2</failsafe.version>
+    <failsafe.version>3.5.3</failsafe.version>
     <surefire.version>3.2.2</surefire.version>
     <junit-bom.version>5.11.4</junit-bom.version>
     <snakeyaml.version>2.0</snakeyaml.version>
@@ -665,6 +665,7 @@
       <id>integration-tests</id>
       <modules>
         <module>sdk-tests</module>
+        <module>spring-boot-examples</module>
       </modules>
         <build>
             <plugins>
