--- a/spring-boot-examples/workflows/multi-app/pom.xml
+++ b/spring-boot-examples/workflows/multi-app/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.dapr</groupId>
-    <artifactId>dapr-sdk-parent</artifactId>
+    <artifactId>workflows</artifactId>
     <version>1.17.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>spring-boot-examples</artifactId>
+  <artifactId>multi-app</artifactId>
   <version>1.17.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
@@ -18,9 +18,9 @@
   </properties>
 
   <modules>
-    <module>producer-app</module>
-    <module>consumer-app</module>
-    <module>workflows</module>
+    <module>orchestrator</module>
+    <module>worker-one</module>
+    <module>worker-two</module>
   </modules>
 
   <dependencyManagement>
@@ -50,23 +50,6 @@
         <configuration>
           <!-- Skip checkstyle for auto-generated code -->
           <skip>true</skip>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <configuration>
-          <classesDirectory>${project.build.outputDirectory}</classesDirectory>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <!-- Exclude full package from test coverage -->
-            <exclude>**/*io/dapr/springboot/examples/**</exclude>
-          </excludes>
         </configuration>
       </plugin>
     </plugins>
