--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,9 +67,9 @@ jobs:
       GOARCH: amd64
       GOPROXY: https://proxy.golang.org
       JDK_VER: ${{ matrix.java }}
-      DAPR_CLI_VER: 1.15.0
-      DAPR_RUNTIME_VER: 1.16.0-rc.8
-      DAPR_INSTALL_URL: https://raw.githubusercontent.com/dapr/cli/v1.15.0/install/install.sh
+      DAPR_CLI_VER: 1.16.0
+      DAPR_RUNTIME_VER: 1.16.0
+      DAPR_INSTALL_URL: https://raw.githubusercontent.com/dapr/cli/v1.16.0/install/install.sh
       DAPR_CLI_REF:
       DAPR_REF:
       TOXIPROXY_URL: https://github.com/Shopify/toxiproxy/releases/download/v2.5.0/toxiproxy-server-linux-amd64
