--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -30,7 +30,6 @@
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
-      <version>1.9.0</version>
     </dependency>
     <dependency>
       <groupId>io.grpc</groupId>
@@ -66,7 +65,6 @@
     <dependency>
       <groupId>com.jayway.jsonpath</groupId>
       <artifactId>json-path</artifactId>
-      <version>2.9.0</version>
     </dependency>
     <dependency>
       <groupId>io.opentelemetry</groupId>
@@ -111,7 +109,6 @@
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-console-standalone</artifactId>
-      <version>1.7.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -137,12 +134,11 @@
     <dependency>
       <groupId>com.evanlennick</groupId>
       <artifactId>retry4j</artifactId>
-      <version>0.15.0</version>
     </dependency>
     <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
+      <version>${javax.annotation.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.protobuf</groupId>
