--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,6 @@
     <slf4j.version>2.0.9</slf4j.version>
     <mockito.version>3.11.2</mockito.version>
     <opentelemetry-bom.version>2.1.0</opentelemetry-bom.version>
-    <microcks-testcontainers.version>5.5.1</microcks-testcontainers.version>
     <kotlin.version>2.1.0</kotlin.version>
     <rest-assured.version>5.5.1</rest-assured.version>
   </properties>
@@ -246,6 +245,11 @@
         <version>${springboot.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-autoconfigure</artifactId>
+        <version>${springboot.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.springframework.data</groupId>
         <artifactId>spring-data-keyvalue</artifactId>
         <version>${springboot.version}</version>
@@ -310,11 +314,6 @@
       <dependency>
         <groupId>io.grpc</groupId>
         <artifactId>grpc-netty</artifactId>
-        <version>${grpc.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.grpc</groupId>
-        <artifactId>grpc-netty-shaded</artifactId>
         <version>${grpc.version}</version>
       </dependency>
       <dependency>
@@ -464,6 +463,16 @@
         <version>${jackson.version}</version>
       </dependency>
       <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
         <groupId>io.projectreactor</groupId>
         <artifactId>reactor-core</artifactId>
         <version>${reactor.version}</version>
@@ -477,6 +486,16 @@
         <groupId>com.redis</groupId>
         <artifactId>testcontainers-redis</artifactId>
         <version>${testcontainers-redis.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.github.microcks</groupId>
+        <artifactId>microcks-testcontainers</artifactId>
+        <version>${microcks.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>${assertj.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
