Optimize Dapr Spring version management.
Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -109,7 +109,7 @@
     <dependency>
       <groupId>io.dapr</groupId>
       <artifactId>dapr-sdk-workflows</artifactId>
-      <version>${dapr.sdk.version}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>io.dapr</groupId>
