--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -20,7 +20,6 @@
     <argLine>
       --add-opens java.base/java.util=ALL-UNNAMED
     </argLine>
-          
   </properties>
 
   <dependencies>
@@ -119,6 +118,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.grpc</groupId>
